// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command Component - Core Functional Tests matches snapshot for basic command with input and list 1`] = `
<div
  class="bg-BG_WHITE text-GRAY_1000 flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-_r_1s_"
    id="radix-_r_1r_"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    class="flex items-center px-3"
    cmdk-input-wrapper=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="radix-_r_1q_"
      aria-expanded="true"
      aria-labelledby="radix-_r_1r_"
      autocomplete="off"
      autocorrect="off"
      class="placeholder:text-GRAY_700 flex h-10 w-full rounded-md bg-transparent py-3 text-sm outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
      cmdk-input=""
      id="radix-_r_1s_"
      placeholder="Snapshot..."
      role="combobox"
      spellcheck="false"
      type="text"
      value=""
    />
  </div>
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-_r_1q_"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        aria-disabled="false"
        aria-selected="true"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-GRAY_1000 relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="true"
        data-value="Snap 1"
        id="radix-_r_1t_"
        role="option"
      >
        Snap 1
      </div>
      <div
        aria-disabled="false"
        aria-selected="false"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-GRAY_1000 relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="false"
        data-value="Snap 2"
        id="radix-_r_1u_"
        role="option"
      >
        Snap 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command dialog 1`] = `null`;

exports[`Command Component - Core Functional Tests matches snapshot for command item with shortcut 1`] = `
<div
  class="bg-BG_WHITE text-GRAY_1000 flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-_r_2f_"
    id="radix-_r_2e_"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-_r_2d_"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        aria-disabled="false"
        aria-selected="true"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-GRAY_1000 relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="true"
        data-value="New File⌘N"
        id="radix-_r_2g_"
        role="option"
      >
        New File
        <span
          class="text-GRAY_700 ml-auto text-xs tracking-widest"
        >
          ⌘N
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command with empty state 1`] = `
<div
  class="bg-BG_WHITE text-GRAY_1000 flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-_r_2m_"
    id="radix-_r_2l_"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    class="py-6 text-center text-sm"
    cmdk-empty=""
    role="presentation"
  >
    No results found
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command with groups and separators 1`] = `
<div
  class="bg-BG_WHITE text-GRAY_1000 flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-_r_28_"
    id="radix-_r_27_"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-_r_26_"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        class="text-GRAY_1000 [&_[cmdk-group-heading]]:text-GRAY_700 overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
        cmdk-group=""
        data-value="Group"
        role="presentation"
      >
        <div
          aria-hidden="true"
          cmdk-group-heading=""
          id="radix-_r_2a_"
        >
          Group
        </div>
        <div
          aria-labelledby="radix-_r_2a_"
          cmdk-group-items=""
          role="group"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-GRAY_1000 relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
            cmdk-item=""
            data-disabled="false"
            data-selected="true"
            data-value="Item 1"
            id="radix-_r_2b_"
            role="option"
          >
            Item 1
          </div>
        </div>
      </div>
      <div
        class="bg-border -mx-1 h-px"
        cmdk-separator=""
        role="separator"
      />
      <div
        aria-disabled="false"
        aria-selected="false"
        class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-GRAY_1000 relative flex cursor-pointer items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0"
        cmdk-item=""
        data-disabled="false"
        data-selected="false"
        data-value="Item 2"
        id="radix-_r_2c_"
        role="option"
      >
        Item 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Command Component - Core Functional Tests matches snapshot for command with loading state 1`] = `
<div
  class="bg-BG_WHITE text-GRAY_1000 flex h-full w-full flex-col overflow-hidden rounded-md"
  cmdk-root=""
  tabindex="-1"
>
  <label
    cmdk-label=""
    for="radix-_r_2j_"
    id="radix-_r_2i_"
    style="position: absolute; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
  />
  <div
    aria-label="Suggestions"
    class="max-h-[300px] overflow-x-hidden overflow-y-auto"
    cmdk-list=""
    id="radix-_r_2h_"
    role="listbox"
    tabindex="-1"
  >
    <div
      cmdk-list-sizer=""
    >
      <div
        aria-label="Loading..."
        aria-valuemax="100"
        aria-valuemin="0"
        cmdk-loading=""
        role="progressbar"
      >
        <div
          aria-hidden="true"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;
